filled out Project.toml with package info

--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,8 @@
+authors = ["Tyson Burghardt <slowspikewave@epileptic.us>"]
+version = "0.1"
+name = "SOBI"
+uuid = "60f12e87-f082-4629-8d32-33db55a0e8e7"
+
 [deps]
 Diagonalizations = "9cd687f3-b62d-43f3-8fd3-ffcd9e581047"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
