--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,13 @@
-authors = ["Tyson Burghardt <slowspikewave@epileptic.us>"]
-version = "0.1"
 name = "SOBI"
 uuid = "60f12e87-f082-4629-8d32-33db55a0e8e7"
+version = "0.1.0"
+authors = ["Tyson Burghardt <slowspikewave@epileptic.us>"]
 
 [deps]
 Diagonalizations = "9cd687f3-b62d-43f3-8fd3-ffcd9e581047"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[compat]
+Test = "1.11.0"
